examples/good/05-while-if.wlk
# (while, if)

def main() -> Void:
    Int x = 10
    
    while x > 0:
        if x % 2 == 1:
            print(x)
        x = x - 1