examples/bad/15-modulo-by-0.wlk
# (modulo by 0)

def main() -> Void:
    print(5 % 0)